--- a/examples-next/ecommerce/package.json
+++ b/examples-next/ecommerce/package.json
@@ -15,6 +15,7 @@
     "@keystone-next/fields": "^4.0.0",
     "@keystone-next/keystone": "^7.0.0",
     "@keystone-next/types": "^7.0.0",
+    "@keystonejs/test-utils": "^10.1.0",
     "dotenv": "^8.2.0",
     "next": "^9.5.5",
     "nodemailer": "^6.4.16",
